Clean up for new language level